--- a/教学检查-何为/进度/人工智能概论进度.html
+++ b/教学检查-何为/进度/人工智能概论进度.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>C语言程序设计</title>
-  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/ai/progress" />
+  <title>人工智能概论</title>
+  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/#/ai/progress" />
   <style>
     body{
       height: 95vh;
