--- a/教学检查-何为/教案/人工智能概论教案.html
+++ b/教学检查-何为/教案/人工智能概论教案.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>人工智能概论</title>
-  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/ai/plan" />
+  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/#/ai/plan" />
   <style>
     body{
       height: 95vh;
