--- a/教学检查-何为/课件/电气工程基础能力课件.html
+++ b/教学检查-何为/课件/电气工程基础能力课件.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>C语言程序设计</title>
-  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/ee/contents" />
+  <title>电气工程基础能力</title>
+  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/#/ee/contents" />
   <style>
     body{
       height: 95vh;
