--- a/教学检查-何为/进度/C语言程序设计进度.html
+++ b/教学检查-何为/进度/C语言程序设计进度.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>C语言程序设计</title>
-  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/c/progress" />
+  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/#/c/progress" />
   <style>
     body{
       height: 95vh;
