fix URL error in midterm inspection

--- a/教学检查-何为/课件/人工智能概论课件.html
+++ b/教学检查-何为/课件/人工智能概论课件.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>人工智能概论</title>
-  <meta http-equiv="Refresh" content="1;url=https://hewei-next.teaching.app/#/ai/contents" />
+  <meta http-equiv="Refresh" content="2;url=https://hewei-teacher.netlify.app/#/ai/contents" />
   <style>
     body{
       height: 95vh;
