--- a/教学检查-何为/课件/电气工程基础能力课件.html
+++ b/教学检查-何为/课件/电气工程基础能力课件.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>电气工程基础能力</title>
-  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/#/ee/contents" />
+  <meta http-equiv="Refresh" content="2;url=https://hewei-teacher.netlify.app/#/ee/contents" />
   <style>
     body{
       height: 95vh;
