--- a/教学检查-何为/实训/指导书.html
+++ b/教学检查-何为/实训/指导书.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>实训指导书</title>
-  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/#/training" />
+  <meta http-equiv="Refresh" content="1;url=https://hewei-teacher.netlify.app/#/training" />
   <style>
       body{
           height: 95vh;
