--- a/教学检查-何为/课件/C语言程序设计课件.html
+++ b/教学检查-何为/课件/C语言程序设计课件.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>C语言程序设计</title>
-  <meta http-equiv="Refresh" content="1;url=https://hewei-teaching.netlify.app/#/c/contents" />
+  <meta http-equiv="Refresh" content="2;url=https://hewei-teacher.netlify.app/#/c/contents" />
   <style>
     body{
       height: 95vh;
